--- a/Guess/project_0/game.ipynb
+++ b/Guess/project_0/game.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from game_v2 import score_game, random_predict"
+    "from game_v2 import random_predict, score_game"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Alghorythm guesses average: 9\n",
+      "Alghorythm guesses average: 5\n",
       "\n"
      ]
     },
@@ -50,7 +50,7 @@
        "'Game over'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
